--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,8 @@
+/*
+TODO: Portrait should take up the same space for each unit.
+TODO: Fit layout to align with plan.
+*/
+
 .unit-container {
     float: left;
     height: 400px;
