Add visual support for bows and battle separation

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,8 @@ TODO: Fit layout to align with plan.
     float: left;
     height: 400px;
     width: 75px;
+
+    text-align: center;
 }
 
 button {
