--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@ TODO: Use absolute layout throughout.
 
 .unit-container {
     float: left;
-    height: 500px;
+    height: 530px;
     width: 400px;
     border-radius: 5px;
 
@@ -22,7 +22,7 @@ TODO: Use absolute layout throughout.
 .top-containers {
     float: left;
 
-    height: 250px;
+    height: 280px;
     width: 200px;
 }
 
@@ -56,7 +56,7 @@ td input {
     text-align: center;
 }
 
-.unit-portrait-container {
+.portrait-container {
     height: 90px;
     width: 100px;
     margin: auto;
@@ -81,7 +81,7 @@ td input {
 
 #battle-log-container {
     position: absolute;
-    top: 250px;
+    top: 295px;
     left: 200px;
 }
 
